[package]
name = "macro_input"
version = "0.1.1"
edition = "2021"
description = "A crate that provides a macro for handling user input with type safety and custom error handling."
authors = ["Radmir <radmir0099lol@gmail.com>"]
keywords = ["macro", "input", "stream", "user_input", "rust"]
repository = "https://github.com/LunaLiena/macro_input.git"
license = "MIT"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
exclude = ["/target"]
